# Tesserract-Py-AutoClicker

./: CI_CHECKLIST.md  README.md  autoclicker.py  autoclicker.spec  check_imports.py  debug_make_template.py  debug_ocr.py  debug_ocr2.py  debug_window.py  gui.py  requirements.txt  setup.cfg
.github/workflows/: ci.yml
docs/: README.md  index.md
packaging/: autoclicker_autostart.spec  autoclicker_build.spec  autoclicker_console.spec
src/: __init__.py  autoclicker.py
src/templates/: __init__.py
tests/: __init__.py  test_placeholder.py
tools/: __init__.py  debug_ocr.py  debug_ocr3.py
