[metadata]
name = autoclicker
version = 0.1.0
description = OCR Autoclicker
long_description = file: docs/README.md
long_description_content_type = text/markdown
author = Ajing

[options]
packages = find:
include_package_data = True
zip_safe = False

[options.packages.find]
where = .

[options.package_data]
src = templates/*
